# vc-playground

agents_a/: pyproject.toml
agents_a/yt-researcher/: crew.py  tasks.py  tools.py  yt_researcher.py
agno/mcp_github/: .gitignore  hello.py  pyproject.toml
agno/pdf-rag/: main.py  pyproject.toml
ai-agent/code-review/: README.md  detectLanguage.ts  main.ts  package.json  parallelCodeReview.ts
ai-agent/fight/: .prettierrc  README.md  constants.ts  index.ts  package.json  utils.ts
ai-agent/lang/: .gitignore  package.json  tsconfig.json
ai-agent/lang/src/: llm.ts  (+2 more)
ai-agent/mcp_agents/: dockerfile  github.py  lambda_function.py  pyproject.toml  requirements.txt
ai-agent/src/: index.ts
ai-agent/weather/: README.md  bun.lockb  package.json
ai-agent/webpage-support/: .gitignore  package.json
ai-dns/: .gitignore  bun.lockb  package.json
ai-dns/src/: index.ts
ai-todo/: README.md  constants.ts  docker-compose.yaml  index.ts  package.json  tools.ts
dock-component/: bun.lockb  package.json
excelidraw/: .prettierrc  bun.lockb  docker-compose.yaml  package.json  turbo.json
leader-elections/bully-algo/: .gitignore  Readme.MD  ds.go  go.mod  go.sum  main.go  message.go  process.go
machine-code/autocomplete/: package.json
machine-code/file-explorer/: package.json
machine-code/progress-bar/: package.json
mcp/playwright/: .gitignore  package.json  tsconfig.json
mcp/test-agno-tools/: .gitignore  hello.py  pyproject.toml
mcp/testing/: README.md  client.ts  index.ts  package.json
meme-trading/: .prettierrc  README.md  bun.lockb  constants.ts  fetchTweets.ts  getTokenFromLLM.ts  index.ts  package.json  swap.ts  types.ts
nm/makemore/: .gitignore  makemore2.ipynb  vansh.ipynb
nm/micro-grad/: vc.ipynb
nn/1/: .gitignore  1.ipynb  churn.ipynb  cnn.ipynb  data_aug_cnn.ipynb  droplet.ipynb  embedding.ipynb  gpu-checking.ipynb  gradient.ipynb  insurance.ipynb  pipe_line_Exercise.ipynb  pipeline.ipynb  pyproject.toml  tl.ipynb  word_2_vec.ipynb
nn/1/logs/train/: events.out.tfevents.1757854516.Vanshs-MacBook-Pro.local.92066.0.v2
nn/bert/: bert.ipynb  classify.ipynb  main.py  project.ipynb  pyproject.toml
nn/proj/: .gitignore  1.ipynb  main.py  pyproject.toml
nn/yolo/: .gitignore  main.py  pyproject.toml  supervised_emb.ipynb
protocl/: README.md  client.ts  example.ts  index.ts  package.json
py/hus/: hello.py  pyproject.toml
rule-30-pseudorandom/: .prettierrc  bun.lockb  components.json  package.json  tailwind.config.js
swe-maths-weekly-arpit/: ancient-library.ts
test-ai/bq/: main.py  pyproject.toml  settings.py
test-ai/bq/src/: embed_data.py
test-ai/lang-extract-ai/: .env.template  README.md  extraction_results.jsonl  main.py  pyproject.toml  simple_pdf.py
test-ai/lang-extract-ai/providers/: __init__.py  azure_provider.py
vertical-shard/: .prettierrc  README.md  config.ts  docker-compose.yaml  index.ts  package.json
zerod-mcp/: .gitignore  README.md  index.ts  package.json
(+101 files in other folders)
