[project]
name = "mcp-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.1.9",
    "aiohttp>=3.11.13",
    "anthropic>=0.49.0",
    "azure-ai-inference>=1.0.0b9",
    "mcp>=1.3.0",
    "openai>=1.65.4",
]
