[project]
name = "test-agno-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.2.10",
    "google-genai>=1.9.0",
    "groq>=0.22.0",
    "huggingface-hub>=0.30.1",
    "ollama>=0.4.7",
    "openai>=1.70.0",
    "pgvector>=0.4.0",
    "psycopg>=3.2.6",
    "sqlalchemy>=2.0.40",
]
