[project]
name = "1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim",
    "imbalanced-learn>=0.14.0",
    "imblearn>=0.0",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "tf-keras>=2.20.1",
]
