[project]
name = "bq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.177.0",
    "firecrawl-py>=4.3.6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymilvus>=2.6.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
