[project]
name = "lang-extract-ai"
version = "0.1.0"
description = "LangExtract with Azure OpenAI provider"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langextract>=1.0.8",
    "openai>=1.0.0",
    "pymupdf>=1.23.0",
]

[project.entry-points."langextract.providers"]
azure = "providers.azure_provider:create_azure_model"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["providers"]
